--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "react-typist": "^2.0.5",
+    "react-typist-loop": "0.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
